# secretsv1

./: .gitignore  AGENTS.md  DEVELOPMENT_PLAN.md  Dockerfile  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  roadmap.md  turbo.json
apps/tauri/src-tauri/: Cargo.toml  SYNC_SETUP.md  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/migrations/: 001_create_users.sql  002_create_notebooks.sql  003_create_notes.sql  004_create_todos.sql  005_create_calendar_events.sql  006_create_tags.sql  007_create_note_tags.sql  008_create_search_index.sql  009_create_encryption_keys.sql  010_create_sync_queue.sql  011_create_attachments.sql  012_create_app_settings.sql  013_create_device_info.sql  014_create_recurring_todos.sql  015_add_recurring_events.sql  016_add_recurring_todos_index.sql  017_create_todo_tags.sql  018_create_templates.sql  019_add_todos_archived.sql  020_cleanup_session_hmac.sql  021_add_todo_note_link.sql
apps/tauri/src-tauri/src/: lib.rs  main.rs
apps/tauri/src-tauri/src/commands/: archive.rs  attachments.rs  auth.rs  calendar.rs  data.rs  encryption.rs  helpers.rs  mod.rs  notebooks.rs  notes.rs  recurring_todos.rs  sync.rs  tags.rs  templates.rs  todos.rs
apps/tauri/src-tauri/src/crypto/: aes_gcm.rs  argon2.rs  key_derivation.rs  manager.rs  mod.rs
apps/tauri/src-tauri/src/database/: mod.rs  models.rs  pool.rs
apps/tauri/src-tauri/src/sync/: conflict.rs  manager.rs  mod.rs  queue.rs  supabase.rs
autonomous-app-builder/: bootstrap.prompt.md
opencode/: loader.md  (+1 more)
(+74 files in other folders)
