[package]
name = "knowledge-base"
version = "1.0.0"
edition = "2021"

[lib]
name = "knowledge_base_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "knowledge-base"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
thiserror = "2"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["sync", "macros"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
